# testing-fasthtml

./: .gitignore  README.md  pyproject.toml
.github/workflows/: on_push.yaml
app/: database.py  main.py  models.py  utils.py
tests/: conftest.py  test_app.py  test_database.py
