[project]
name = "testing-fasthtml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.3.3",
    "python-fasthtml>=0.6.9",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-playwright>=0.5.2",
    "poethepoet>=0.29.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: mark a test as an integration test",
    "e2e: mark a test as an end-to-end test",
]

[tool.poe.tasks]
unit = "pytest -m 'not integration and not e2e'"
integration = "pytest -m integration"
e2e = "pytest -m e2e"
setup_e2e = "playwright install chromium --with-deps"
